--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/cloudy"
-        android:label="@string/app_name"
+        android:label="Weather App"
         android:roundIcon="@drawable/cloudy"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
